<resources>
    <string name="app_name">Admin Baut Jaya</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_category">Kategori</string>
    <string name="menu_produk">Produk</string>
    <string name="menu_data_penjualan">Data Pesanan</string>
    <string name="menu_informasi_toko">Toko Saya</string>
    <string name="menu_metode_pembayaran">Metode Pembayaran</string>
    <string name="menu_data_kurir">Data Kurir</string>
    <string name="menu_produk_list">Daftar Produk</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_order">Daftar pesanan</string>
    <string name="menu_rekap_penjualan">Rekapitulasi Penjualan</string>
    <string name="menu_sign_out">Logout</string>
    <string name="action_search">Cari</string>
    <string name="action_filter">Filter</string>


    <string name="mapbox_access_token">sk.eyJ1IjoiYWthcmFkaXN0aXJhIiwiYSI6ImNraGFiNWthbTE1OHEycnJ0YW9tcWF5Nm0ifQ.ELJor5KbOeSBPm4k5qVgyg</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

</resources>
